# clog4all

./: CMakeLists.txt  LICENSE  README.md  main.cpp
3dparty/mingw-std-threads-master/: CMakeLists.txt  mingw.mutex.h
3dparty/mingw-std-threads-master/tests/: tests.cpp
logger/: CMakeLists.txt  logger.cpp  logger.h  logger_impl.cpp  logger_impl.h
tests/: CMakeLists.txt
tests/stuff/: CMakeLists.txt  logger_c_test_ground.c  logger_c_test_ground.h  logger_cpp_test_ground.cpp  logger_cpp_test_ground.h  logger_objc_test_ground.h  logger_objc_test_ground.mm
tests/unitTests/: CMakeLists.txt  logger_test.cpp
